# docs/swagger.yaml
@@ -2280,6 +2280,21 @@ paths:
           description: bad request
         "401":
           description: incorrect credentials
+  /user/logout:
+    post:
+      tags:
+        - User
+      summary: Logout
+      operationId: logout
+      security:
+        - userToken: []
+      responses:
+        "204":
+          description: Success
+        "401":
+          description: Not Authorized
+        "500":
+          description: Internal Server Error
   /user/profile:
     get:
       tags:
